<resources>
    <string name="app_name">Koiambuyer</string>
    <string name="single_tv_fast_msg">您点的太快，请重试</string>
    <string name="account_login">登录</string>
    <string name="account_register">注册</string>
    <string name="account_identify">手机验证码登录</string>
    <string name="account_forget">忘记密码？</string>
    <string name="account_hint_phone"> 手机号/邮箱</string>
    <string name="account_hint_pwd"> 密码</string>
    <string name="account_or">——or——</string>
    <string name="account_agree">注册即表示同意iambuyer的</string>
    <string name="account_xie_yi">用户协议</string>
    <string name="account_he">和</string>
    <string name="account_secret">隐私政策</string>
    <string name="get_identify">获取验证码</string>
    <string name="send_identify">发送验证码</string>
    <string name="stv_default">确定</string>
    <string name="scan_text">请将二维码置于扫描框内开始扫描</string>
    <string name="language_text">当前解码语言：</string>
    <string name="change_phone_hint">修改手机号后，可以使用新手机号登录iambuyer账号，\n聊天时“交换名片”功能的手机号会一同修改</string>
    <string name="input_phone"> 请输入手机号</string>
    <string name="input_identify"> 请输入验证码</string>
    <string name="next">下一步</string>
    <string name="phone_email"> 手机号/邮箱</string>
    <string name="pwd"> 密码</string>
    <string name="login">登录</string>
    <string name="input_cannot_empty">输入框不能为空</string>
    <string name="please_get_identify">请获取验证码</string>
    <string name="phone_incorrect">手机号不合理，请重新输入</string>
    <string name="agree_agreement">同意协议后才能进行下一步</string>
    <string name="account_incorrect">账号不合理，请重新输入</string>
    <string name="input_format_pwd">请输入6-18位字母/数字组合</string>
    <string name="send_identify_already">验证码已经发送，请在15分钟内输入</string>
    <string name="login_by_identify">手机验证码登录</string>
    <string name="login_by_pwd">账号登录</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="dialog_default_title">特别提示</string>
    <string name="dialog_default_cancel">取消</string>
    <string name="dialog_default_sure">确定</string>
    <string name="input_text">请输入文字</string>
    <string name="submit">提交</string>
    <string name="choose_account_type">请选择账户类型</string>
    <string name="home_home">首页</string>
    <string name="home_me">我的</string>
    <string name="personal_data_head">头像</string>
    <string name="personal_data_name">姓名</string>
    <string name="personal_data_name_hint"> 请填写</string>
    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_email">邮箱地址</string>
    <string name="personal_data_qr_code">专属二维码</string>
    <string name="search_goods">全部商品</string>
    <string name="search_companies">全部公司</string>
    <string name="search_hot_goods">热门商品</string>
    <string name="search_hot_companies">热门公司</string>
    <string name="setting_edit_phone">修改手机号</string>
    <string name="setting_edit_pwd">修改密码</string>
    <string name="setting_about_us">关于iambuyer</string>
    <string name="setting_version">版本更新</string>
    <string name="setting_login_out">退出登录</string>
    <string name="ship_address_add">新增地址</string>
    <string name="photo_camera">拍照</string>
    <string name="photo_pics">从手机相册中选择</string>
    <string name="cancel">取消</string>
    <string name="dialog_identify_input">请输入图中的验证码</string>
    <string name="confirm">确认</string>
    <string name="change_input_identify"> 请输入手机验证码</string>
    <string name="choice_local">所在地</string>
    <string name="edit_ship_address_local">所在地区</string>
    <string name="edit_ship_address_detail">详细地址</string>
    <string name="edit_ship_address_local_hint"> 请选择地区信息</string>
    <string name="edit_ship_address_detail_hint"> 请填写详细地址</string>
    <string name="edit_ship_address_default">默认发货地址</string>
    <string name="me_qr_code">扫一扫</string>
    <string name="me_edit_info">查看并修改个人信息</string>
    <string name="me_enquiry">我的询盘\n点击查看或编辑公司的具体信息哦</string>
    <string name="me_ship_address">发货地址\n查看隶属于您公司名下的子账户信息</string>
    <string name="me_msg">消息列表</string>
    <string name="me_suggestion">意见反馈</string>
    <string name="me_setting">设置</string>
    <string name="publish">发布</string>
    <string name="set_pwd">设置密码</string>
    <string name="set_pwd_hint"> 请设置6-18位字母/数字的密码</string>
    <string name="set_confirm_pwd">确认密码</string>
    <string name="set_confirm_pwd_hint"> 请确认您的密码</string>
    <string name="suggestion_title">问题和意见</string>
    <string name="suggestion_title_hint"> 您宝贵的意见是我们不断进步的阶梯~</string>
    <string name="delete">删除</string>
    <string name="change">更换</string>
    <string name="re_load">重新加载</string>
    <string name="re_load_hint">哎呀，断网了！请检查您的网络连接哦</string>
    <string name="no_data">没有数据</string>
    <string name="search">搜索</string>
    <string name="search_hint"> 请输入关键字</string>
    <string name="pic_picker">图片查看</string>
    <string name="replace">替换</string>
    <string name="edit">编辑</string>
    <string name="choice_city">城市选择</string>
    <string name="input_can_not_empty">输入不能为空</string>
    <string name="max_input">最多输入</string>
    <string name="max_texts">个字</string>
    <string name="toolbar_edit_phone">修改手机号</string>
    <string name="toolbar_edit_pwd">更换密码</string>
    <string name="toolbar_update_pwd">更新密码</string>
    <string name="toolbar_bind_email">绑定邮箱</string>
    <string name="toolbar_forget_pwd">忘记密码</string>
    <string name="toolbar_suggestion">意见和反馈</string>
    <string name="toolbar_edit_address">编辑地址</string>
    <string name="toolbar_new_address">新建地址</string>
    <string name="toolbar_about_us">关于我们</string>
    <string name="toolbar_set_pwd">设置密码</string>
    <string name="toolbar_set_name">设置名字</string>
    <string name="toolbar_com_info">公司信息</string>
    <string name="toolbar_main_trade">主营行业</string>
    <string name="hot_sell">热卖： </string>
    <string name="hold"> 等</string>
    <string name="provide"> 条供应</string>
    <string name="have_no_hot_goods"> 该公司还没有热卖的产品~</string>
    <string name="personal_account">个人账户</string>
    <string name="face">面议</string>
    <string name="can_not_change_ship_address">对不起，主账户才能改变发货地址状态~</string>
    <string name="camera_permission">拍照需要摄像头权限</string>
    <string name="have_no_sd">设备没有SD卡！</string>
    <string name="open_camera">拍照需要权限,请在设置中打开</string>
    <string name="pics_permission">相册需要存储权限</string>
    <string name="search_toast">请输入关键字</string>
    <string name="find_title">发现</string>
    <string name="all">全部</string>
    <string name="have_no_good">还没有发布该类商品</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="personal_data_title">个人资料</string>
    <string name="must_have_name">姓名不能为空</string>
    <string name="have_not_save">您还没有保存</string>
    <string name="head_have_change">头像已修改</string>
    <string name="new_version">当前版本已经是最新版本，如有更\n新我们会及时通知的哦~</string>
    <string name="know">知道了</string>
    <string name="new_version_is">最前版本是</string>
    <string name="please_update">请及时更新哟</string>
    <string name="exit_this">您确定要退出吗?</string>
    <string name="ship_address">发货地址</string>
    <string name="have_no_suggestion">反馈意见未填写</string>
    <string name="sorry_only_add">对不起，只能添加</string>
    <string name="pic_num">个图片</string>
    <string name="updating">上传中...</string>
    <string name="suggestion_have_submit">反馈意见已提交,我们会尽快处理哟~</string>
    <string name="pic_updating">图片正在上传,请稍等</string>
    <string name="re_send">重新发送</string>
    <string name="change_sure">确认修改</string>
    <string name="phone_is">当前手机号：</string>
    <string name="need_phone">修改密码需要验证手机号，请点击获取验证码，输入验证\n码后，会进入修改密码的界面哦</string>
    <string name="phone_not_correct">手机号不正确,请重新输入</string>
    <string name="change_success">修改成功</string>
    <string name="have_not_register">您还没有注册过，快去注册吧</string>
    <string name="parse_failure">解析失败</string>
    <string name="location_permission">需要定位权限</string>
    <string name="register_done">完成注册</string>
    <string name="register_success">恭喜您，注册成功~</string>
    <string name="update_success">更新成功,跳到主页面~</string>
    <string name="city_manager">选择城市经理</string>
    <string name="city_manager_et_hint">请输入城市经理姓名/账号</string>


</resources>
