<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_camera"
        android:text="@string/photo_camera"
        android:textColor="@color/mainColor"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:background="@color/BgColor"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/tv_photo"
        android:text="@string/photo_pics"
        android:textColor="@color/mainColor"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:background="@color/LineColor"
        android:layout_width="match_parent"
        android:layout_height="6dp"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        android:textColor="@color/tvNormalColor"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>