<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/head"
    android:background="@color/StvColor"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <FrameLayout
        android:background="@mipmap/me_bg_buyer"
        android:layout_width="match_parent"
        android:layout_height="130dp" >
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/account_logo"
            android:layout_width="100dp"
            android:layout_height="44dp" />
    </FrameLayout>
    <LinearLayout
        style="@style/TabLlStyle">
        <TextView
            style="@style/TabTvLeftStyle"
            android:id="@+id/tv_login"
            android:text="@string/account_login" />
        <TextView
            android:id="@+id/tv_register"
            android:text="@string/account_register"
            style="@style/TabTvRightStyle"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:id="@+id/et_phone"
            style="@style/EtStyle"
            android:textColor="@color/tvNormalColor"
            android:hint="@string/account_hint_phone" />
        <ImageView
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:src="@mipmap/delete"
            android:layout_gravity="center_vertical|right"
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>


    <View style="@style/LineStyle" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:maxLines="1"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:id="@+id/et_password"
            style="@style/EtStyle"
            android:textColor="@color/tvNormalColor"
            android:hint="@string/account_hint_pwd" />
        <TextView
            android:id="@+id/tv_identify"
            android:layout_marginTop="24dp"
            android:layout_marginRight="@dimen/content_padding"
            android:textColor="@color/mainColor"
            android:textSize="15sp"
            android:text="@string/get_identify"
            android:visibility="gone"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_re_identify"
            android:layout_marginTop="24dp"
            android:layout_marginRight="@dimen/content_padding"
            android:textColor="@color/mainColor"
            android:textSize="15sp"
            android:text="@string/get_identify"
            android:visibility="gone"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <View style="@style/LineStyle" />
    <FrameLayout
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login_way"
                android:paddingTop="13dp"
                android:text="@string/account_identify"
                android:paddingBottom="17dp"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/tv_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_weight="1"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/tv_forget"
                android:paddingTop="13dp"
                android:text="@string/account_forget"
                android:paddingBottom="13dp"
                android:layout_marginBottom="14dp"
                android:textColor="@color/minorColor"
                android:textSize="@dimen/tv_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_agree"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_agree"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginBottom="16dp"
                android:text="@string/account_agree"
                android:drawableLeft="@mipmap/login_select"
                android:drawablePadding="6dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_account_xy"
                android:text="@string/account_xie_yi"
                android:textSize="12sp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="@color/mainColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/account_he"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_secret_xy"
                android:text="@string/account_secret"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="@color/mainColor"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </FrameLayout>

    <com.hc360.koiambuyer.widget.SingleTextView
        android:id="@+id/stv_sure"
        style="@style/STVStyle"
        android:clickable="true"
        android:text="@string/account_login"/>
    <View
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_marginTop="18dp"
        android:text="@string/account_or"
        android:textSize="@dimen/tv_min"
        android:gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        android:textColor="@color/minorColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/ll_three_login"
        android:layout_marginLeft="@dimen/account_bottom_margin"
        android:layout_marginRight="@dimen/account_bottom_margin"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"

            android:layout_height="36dp"
            android:id="@+id/iv_qq" />

        <ImageView
            android:id="@+id/iv_wei_xin"
            android:layout_weight="1"
            android:layout_width="0dp"

            android:layout_height="36dp"  />
        <ImageView
            android:id="@+id/iv_hc360"
            android:layout_weight="1"
            android:layout_width="0dp"

            android:layout_height="36dp"  />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_foot"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>
    <View
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
</LinearLayout>
